--- a/index_uva1.html
+++ b/index_uva1.html
@@ -17,6 +17,46 @@ Released   : 20090829
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+	<style>
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: blue;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+</style>
 </head>
 <body>
 	<div id="header-wrapper">
@@ -79,15 +119,14 @@ Released   : 20090829
 		</div>
 		<!-- end #content -->
 		<div id="sidebar">
+			<div class="dropdown">
 			<ul>
+				
 				<li>
-					<h2>Aliquam tempus</h2>
-					<p>Mauris vitae nisl nec metus placerat perdiet est. Phasellus dapibus semper urna. Pellentesque ornare, orci in consectetuer hendrerit, volutpat.</p>
-				</li>
-				<li>
-					<h2>Pellenteque ornare </h2>
+					<button class="dropbtn">Pellenteque ornare </button>
+					<div class="dropdown-content">
 					<ul>
-						<li><a href="index_uva1.html">AASSAkkk</a></li>
+						<li><a href="index_uva1.html">TTTTTTT</a></li>
 						<li><a href="#">Magna lacus bibendum mauris</a></li>
 						<li><a href="#">Velit semper nisi molestie</a></li>
 						<li><a href="#">Eget tempor eget nonummy</a></li>
@@ -96,6 +135,7 @@ Released   : 20090829
 						<li><a href="#">Eget tempor eget nonummy</a></li>
 						<li><a href="#">Nec metus sed donec</a></li>
 					</ul>
+					</div>
 				</li>
 				<li>
 					<h2>Turpis nulla</h2>
@@ -112,7 +152,8 @@ Released   : 20090829
 						<li><a href="#">Nec metus sed donec</a></li>
 					</ul>
 				</li>
-			</ul>
+			  </ul>
+			</div>	
 		</div>
 		<!-- end #sidebar -->
 		<div style="clear: both;">&nbsp;</div>
