--- a/index_uva1.html
+++ b/index_uva1.html
@@ -35,7 +35,7 @@ Released   : 20090829
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: blue;
+    background-color: black;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
