--- a/index_uva1.html
+++ b/index_uva1.html
@@ -123,7 +123,7 @@ Released   : 20090829
 			<ul>
 				
 				<li>
-					<button class="dropbtn">Pellenteque ornare </button>
+					<button class="dropbtn">Pellenteque  </button>
 					<div class="dropdown-content">
 					<ul>
 						<li><a href="index_uva1.html">TTTTTTT</a></li>
@@ -134,8 +134,9 @@ Released   : 20090829
 						<li><a href="#">Velit semper nisi molestie</a></li>
 						<li><a href="#">Eget tempor eget nonummy</a></li>
 						<li><a href="#">Nec metus sed donec</a></li>
+					</div>
 					</ul>
-					 </div>
+					 
 					</div>
 				</li>
 				<li>
