--- a/index_uva1.html
+++ b/index_uva1.html
@@ -73,7 +73,7 @@ Released   : 20090829
 		</div>
 		<!-- end #menu -->
 		<div id="search">
-			<form method="get" action="">
+			<form method="get" action="index_uva2.html">
 				<fieldset>
 				<input type="text" name="s" id="search-text" size="15" />
 				<input type="submit" id="search-submit" value="GO" />
@@ -123,7 +123,7 @@ Released   : 20090829
 			<ul>
 				
 				<li>
-					<button class="dropbtn">Pellenteque  </button>
+					<button class="dropbtn">Pellenteque ABC </button>
 					<div class="dropdown-content">
 					<ul>
 						<li><a href="index_uva1.html">TTTTTTT</a></li>
